wesl_bindgen/src/snapshots/write_all_structs_encase.snap
---
source: wesl_bindgen/src/structs.rs
---
#[repr(C)]
#[derive(Debug, PartialEq, Clone, Copy, encase :: ShaderType)]
pub struct Input0 {
	pub a: u32,
	pub b: i32,
	pub c: f32,
}
impl Input0 {
	pub const fn new(a: u32, b: i32, c: f32) -> Self {
		Self { a, b, c }
	}
}
#[repr(C)]
#[derive(Debug, PartialEq, Clone, Copy, encase :: ShaderType)]
pub struct Nested {
	pub a: Input0,
	pub b: f32,
}
impl Nested {
	pub const fn new(a: Input0, b: f32) -> Self {
		Self { a, b }
	}
}
